fixed code-edtior in dark mode

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -22,8 +22,6 @@
 }
 
 .accordion-action {
-  background-color: white;
-  border: 1px solid #d9d9d9;
   padding: 10px 0px;
   margin-bottom: 10px;
   .euiAccordion__button {
@@ -36,7 +34,6 @@
 }
 
 .euiTextArea.read-only-text-area {
-  background-color: #fbfbfb;
   padding-left: 12px;
   border-color: initial;
   box-shadow: 0 1px 1px -1px rgba(153, 153, 153, 0.2), 0 3px 2px -2px rgba(153, 153, 153, 0.2),
